--- a/templates/base.html
+++ b/templates/base.html
@@ -248,6 +248,7 @@
         </div>
     </footer>
 
+    {% include 'includes/social_proof.html' %}
     {% block extra_scripts %}{% endblock %}
     
     <script>
