before test deploy

--- a/templates/admin_panel/orders/list.html
+++ b/templates/admin_panel/orders/list.html
@@ -329,6 +329,7 @@
                         {% include 'admin_panel/orders/partials/sort_header.html' with label='Sipariş No' column='id' align='left' %}
                         {% include 'admin_panel/orders/partials/sort_header.html' with label='Müşteri' column='customer' align='left' %}
                         <th class="px-4 py-3 text-left">Kampanya</th>
+                        <th class="px-4 py-3 text-left">Sipariş Takip No</th>
                         {% include 'admin_panel/orders/partials/sort_header.html' with label='Tutar' column='amount' align='center' %}
                         {% include 'admin_panel/orders/partials/sort_header.html' with label='Tarih' column='created_at' align='center' %}
                         {% include 'admin_panel/orders/partials/sort_header.html' with label='Durum' column='status' align='center' %}
